c2prj1_cards/grade.txt
Grading at Sun Jan 24 19:39:13 UTC 2021
Compiling cards.c
cards.c: In function ‘suit_letter’:
cards.c:55:20: error: return makes integer from pointer without a cast [-Werror=int-conversion]
   default : return "?"; break;
                    ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
